examples/test/testpolicy8834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8834
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key48: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value37
          key42: value2
      podSelector:
        matchLabels:
          key37: value3
          key36: value34
